--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -131,8 +131,8 @@ span {
 /* Small mobile devices */
 @media (max-width: 480px) {
     .about-me-card {
-                margin-left: 0;
-
+        margin-top: 100px;
+        margin-left: 0;
         padding: 15px;
         min-height: auto;
     }
