--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,17 @@
 <nav class="header-nav">
   <a href="/" class="header-logo">Marcos Vallecillos</a>
-  <ul>
-    <li><a routerLink="/" routerLinkActive>Home</a></li>
-    <li><a routerLink="/projects" active>Projects</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
-  </ul>
+  
+  <button class="hamburger-btn" (click)="toggleMenu()" [class.active]="isMenuOpen" aria-label="Toggle menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
+  <div class="nav-menu" [class.active]="isMenuOpen">
+    <ul>
+      <li><a routerLink="/" routerLinkActive="active" (click)="closeMenu()">Home</a></li>
+      <li><a routerLink="/projects" routerLinkActive="active" (click)="closeMenu()">Projects</a></li>
+      <li><a routerLink="/contact" routerLinkActive="active" (click)="closeMenu()">Contact</a></li>
+    </ul>
+  </div>
 </nav>
