--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -33,7 +33,6 @@
   position: absolute;
   top: 10px;
   right: 15px;
-  
   color: var(--text-color);
   text-decoration: none;
   font-size: 1.5em;
@@ -80,6 +79,8 @@
         width: 92%;
         min-height: 180px;
         padding: 15px;
+        margin-top: -20px;
+        
     }
 
     .default-img, .hover-img {
