--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -8,23 +8,23 @@
   box-sizing: border-box;
 }
 .gitHub-card {
-  background: none; 
+  background: none;
   border-radius: 10px;
   padding: 20px;
-  color: var(--text-color);
+  color: #fff;
   position: relative;
   overflow: hidden;
-  width: 665px;
-  min-height:300px; 
+  min-height: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: flex-start;
   z-index: 1;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 .gitHub-card h2 {
-  color: var(--text-color);
-  margin-bottom: 10px;
+  color: #fff;
+  margin-bottom: auto;
   position: relative;
   z-index: 1;
   font-weight: bold;
@@ -32,10 +32,11 @@
   transition: color 0.3s ease;
 }
 .gitHub-card p {
-  color: var(--text-color);
+  color: #fff;
   position: relative;
   z-index: 1;
-  font-size: 1em;
+  font-size: 1.1em;
+  margin: 0 0 10px 0;
   transition: color 0.3s ease;
 }
 
@@ -83,9 +84,9 @@ svg{
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: fill;
-  z-index: -1;
-  opacity: 0.7; 
+  object-fit: cover;
+  z-index: 0;
+  opacity: 0.7;
 }
 .linkdein-icon {
 
@@ -165,12 +166,12 @@ svg{
 /* Tablet */
 @media (min-width: 768px) {
     .cards-container {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         padding: 30px;
     }
 
     .gitHub-card {
-        grid-column: span 2;
+        grid-column: span 1;
         min-height: 250px;
     }
 
