--- a/src/app/components/theme/theme.component.css
+++ b/src/app/components/theme/theme.component.css
@@ -10,6 +10,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer; 
     font-family: sans-serif;
+    margin-right: 40px;
     padding: 10px;
     transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
     box-sizing: border-box; 
@@ -92,6 +93,7 @@ input:focus + .slider {
         bottom: 16px;
         left: 16px;
         padding: 10px;
+        margin-right: 0;
     }
 
     .switch {
