--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="cards-container">
   <div class="contact-card">
     <img class="default-img" src="../../../../images/correo.svg" alt="Correo">
-         <a href="#" class="external-link-icon">&#x21E8;  </a>
+         <a href="#" class="external-link-icon" routerLink="/contact" >&#x21E8;  </a>
 
   </div>
 </div>
