--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -24,14 +24,14 @@
         <img src="../../../../images/html.png" alt="">
         <img src="../../../../images/css.png" alt="">
         <img src="../../../../images/php.png" alt="">
-        <img src="../../../../images/symfony.png" alt="" style="invert: 1; filter: invert(1);">
+        <img src="../../../../images/symfony.png" alt="" class="cambiarColor">
         <img src="../../../../images/mysql.png" alt="">
         <img src="../../../../images/git.png" alt="">
-        <img src="../../../../images/bootstrap.svg" alt="" style="invert: 1; filter: invert(1);">
+        <img src="../../../../images/bootstrap.svg" alt="" class="cambiarColor">
 
 
     </div>
-
+    
     <div class="nevel-english-card">
         <p class="nevel-english-label">{{getText('Nivel de Inglés', 'English level')}} </p>
         <p class="nevel-english-number">B2</p>
