--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -4,6 +4,7 @@
     <h2 class="text-2xl font-bold text-gray-900 mb-6">Contáctanos</h2>
     
     <form 
+    action="https://script.google.com/macros/s/AKfycbzw8NqxkzaYMkdWp2F97u-5e5508aDZwQ9gsRgQjuOlNsGUuZ8XqThjuyYJxa5Gr8mA/exec"
       (ngSubmit)="onSubmit()" 
       class="space-y-6"
     >
