--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -32,6 +32,9 @@
   font-size: 1.5em;
   transition: color 0.3s ease;
 }
+.cambiarColor{
+  filter: invert(1);
+}
 .gitHub-card p {
   color: var(--text-color);
   position: relative;
